#30 Refactoring header background, watermark, anchor positioning, link text, content distribution, headlines

--- a/src/styles/_basics.scss
+++ b/src/styles/_basics.scss
@@ -4,3 +4,16 @@
   justify-content: center;
   align-items: center;
 }
+
+// Accessibility
+.screen-reader-only:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
