--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,6 @@
 @import 'main';
 @import 'scroll';
 @import 'hero';
-@import 'portfolio';
+@import 'projectCard';
 @import 'skills';
 @import 'footer';
