--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,25 +1,21 @@
 /*------------------ Main ------------------*/
 // Shift contents below header
 .main {
-  padding-top: $header-height-with-gradient;
-}
-
-.scrollFade {
-  transition: opacity 0.1s;
+  padding-top: $header-height;
 }
 
 // Background-watermark
 .watermark {
   height: 150vh;
   width: 100vw;
-  position: absolute;
+  position: fixed;
   z-index: -1;
   top: 0;
   left: -15px;
   overflow-y: hidden;
 
-  background-position: 25vw $header-height-without-gradient;
-  background-size: auto calc(106vh - #{$header-height-without-gradient});
+  background-position: 25vw calc(#{$header-height} - #{$header-gradient-height});
+  background-size: auto calc(105vh - #{$header-height});
   background-repeat: no-repeat;
   background-color: $colour-base-light;
 
@@ -44,33 +40,49 @@
   }
 }
 
+.scrollFade,
+.scrollFadeIn {
+  transition: opacity 0.1s;
+}
+
 // Article-headers for articles, e.g. portfolio, skills
 .article {
 
+  @include screen(medium) {
+    text-align: center;
+  }
+
   &__header {
-    margin: $padding-sides $padding-sides;
+    margin: 0 $padding-sides $padding-sides;
 
     @include screen(small) {
-      margin: $padding-sides-small $padding-sides-small 0;
+      margin: 0 $padding-sides-small $padding-sides-small;
     }
 
     @include screen(medium) {
       display: inline-block;
       width: 600px+$project-image-box-offset-medium;
       text-align: left;
+      margin: 0 $padding-sides-small;
     }
   }
 
   &__headline {
-    margin: 30px 0 10px;
+    margin: 0 0 10px;
+    // margin: 30px 0 10px;
 
     @include screen(medium) {
-      margin: 30px 0 20px;
+      // margin: 0 0 20px;
+      // margin: 30px 0 20px;
     }
   }
 
+
+
+
   &__description {
     font-size: $text-body;
+    margin-top: 1em;
 
     @include screen(medium) {
       font-size: $text-h5;
@@ -80,42 +92,17 @@
 
 // Buffer element to avoid link anchors getting hidden behind fixed header
 // Maximum support solution, whithout having to introduce empty spans
-#home::before,
 #portfolio::before,
 #skillset::before {
   display: block;
-  content: " ";
-  margin-top: -$header-height-with-gradient;
-  height: $header-height-with-gradient;
+  height: $header-height+10px;
+  margin-top: -$header-height+10px;
   visibility: hidden;
   pointer-events: none;
-}
-
-#home::before {
-  margin-top: calc(((100vh - (#{$header-height-with-gradient} + #{$hero-height})) * -0.5) - #{$header-height-with-gradient});
-  height: calc(((100vh - (#{$header-height-with-gradient} + #{$hero-height})) * 0.5) + #{$header-height-with-gradient});
-
-  @include screen(small) {
-    margin-top: calc(((100vh - (#{$header-height-with-gradient} + #{$hero-height-small})) * -0.5) - #{$header-height-with-gradient});
-    height: calc(((100vh - (#{$header-height-with-gradient} + #{$hero-height-small})) * 0.5) + #{$header-height-with-gradient});
-  }
-
-  @include screen(medium) {
-    margin-top: calc(((100vh - (#{$header-height-with-gradient} + #{$hero-height-medium})) * -0.5) - #{$header-height-with-gradient});
-    height: calc(((100vh - (#{$header-height-with-gradient} + #{$hero-height-medium})) * 0.5) + #{$header-height-with-gradient});
-  }
-}
-
-#skillset::before {
+  content: "";
 
   @include screen(large) {
-    margin-top: calc(((380px + 100vh - (#{$header-height-with-gradient} + #{$hero-height-medium})) * -0.5) - #{$header-height-with-gradient});
-    height: calc(((380px + 100vh - (#{$header-height-with-gradient} + #{$hero-height-medium})) * 0.5) + #{$header-height-with-gradient});
+    height: $header-height-large+30px;
+    margin-top: -$header-height-large+30px;
   }
-
-  @include screen(custom, min, 1400px) {
-    margin-top: -$header-height-with-gradient;
-    height: $header-height-with-gradient;
-  }
-
 }
