--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -1,45 +1,49 @@
 /*------------------ Skillset ------------------*/
-// Article-header styles are specified in _main.scss
+// General article-header styles are specified in _main.scss
 .skillset {
-
-  @include screen(medium) {
-    text-align: center;
-  }
 
   @include screen(large) {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: flex-end;
-    margin-bottom: 12vh;
+    margin-bottom: 8vh;
     padding: $padding-sides-small;
+  }
 
-    &-header {
-      width: 25%;
+  &-header {
+
+    @include screen(large) {
+      width: 22%;
+      max-width: 500px;
       margin-right: 50px;
     }
   }
 
   &__collection {
-    padding: 0 $padding-sides 3*$padding-sides;
+    margin: 0 $padding-sides 1.3*$padding-sides;
+    // padding: 0 $padding-sides 3*$padding-sides;
     text-align: left;
 
     @include screen(small) {
-      padding: 10px $padding-sides-small 3*$padding-sides-small;
+      margin: 10px $padding-sides-small 1.3*$padding-sides-small;
+      // padding: 10px $padding-sides-small 2*$padding-sides-small;
     }
 
     @include screen(medium) {
       display: flex;
       flex-flow: row wrap;
       justify-content: space-between;
-      max-width: 740px;
-      margin: 30px auto;
+      gap: 16px;
+
+      width: 600px+$project-image-box-offset-medium;
+      margin: 30px auto 2*$padding-sides-small;
     }
 
     @include screen(large) {
       width: 50%;
+      max-width: 800px;
       flex-grow: 1;
-      padding: 0;
       margin: 0;
     }
   }
@@ -56,22 +60,23 @@
     @include screen(medium) {
       width: 28%;
       flex-grow: 1;
-      margin: 0 12px;
     }
 
     &-headline {
-      margin: .8em 0 .4em;
+      @extend h5;
+      margin-top: 1em;
       color: $colour-base-medium;
     }
 
   }
 
   &__item {
-    background-color: $colour-highlight-2-light;
-    margin: 0 8px 8px 0;
+    margin: 10px 8px 0 0;
     padding: 6px 9px 2px;
     border-radius: $border-radius;
+    background-color: $colour-highlight-2-light;
     color: $colour-base-dark;
+
     font-family: $font-sans-serif;
     font-size: .9em;
     font-weight: 700;
